objects/SA_Audit__Object_Log__c.object
<CustomObject>
    <fields>
        <fullName>SA_Audit__Date__c</fullName>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SA_Audit__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SA_Audit__Name__c</fullName>
        <displayFormat>Log-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>SA_Audit__Object_Type__c</fullName>
        <label>Object Type</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SA_Audit__User_Name__c</fullName>
        <label>User Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SA_Audit__Value__c</fullName>
        <label>Value</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Object Log</label>
    <nameField>
        <label>Object Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Object Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>